fixed main view alignment buttons

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -80,8 +80,9 @@ body{
 //################# MAIN VIEW BUTTONS ##################//
 
 
+
 .mainViewBtns{
-  margin-left: 16%;
+  margin-left: 24%;
   margin-top: 175px;
 
 }
@@ -94,7 +95,7 @@ body{
 
 
 #weatherBtn{
-  width: 32%;
+  width: 45%;
   height: 95px;
   margin-right: 7%;
   margin-left: -16%;
@@ -108,7 +109,7 @@ body{
 }
 
 #newBtn{
-  width: 32%;
+  width: 45%;
   height: 95px;
   margin-left: 0px;
   border-radius: 10px;
@@ -121,7 +122,7 @@ body{
 }
 
 #bookBtn{
-  width: 32%;
+  width: 45%;
   height: 95px;
   margin-right: 7%;
   margin-left: -16%;
@@ -135,7 +136,7 @@ body{
 }
 
 #statsBtn{
-  width: 32%;
+  width: 45%;
   height: 95px;
   margin-left: 0px;
   border-radius: 10px;
